--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 TWILIO_ACCOUNT_SID=your_account_sid_here
 TWILIO_AUTH_TOKEN=your_auth_token_here
 TWILIO_PHONE_NUMBER=+1234567890
+PUBLIC_BASE_URL=https://your-ngrok-or-app-url
 
 # Google Cloud Configuration
 GOOGLE_APPLICATION_CREDENTIALS=path/to/your/credentials.json
@@ -14,6 +15,7 @@ GEMINI_API_KEY=your_gemini_api_key_here
 ENVIRONMENT=development
 DEBUG=True
 LOG_LEVEL=INFO
+REDIS_URL=redis://localhost:6379
 
 # Database
 DATABASE_URL=sqlite:///./voice_bot.db
